[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "drooghulp"
version = "0.1.0"
description = "A Python project"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/yourusername/drooghulp"
Repository = "https://github.com/yourusername/drooghulp"

[tool.setuptools]
packages = ["drooghulp"]
